# juicebox

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  jest.config.cjs  package.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  coverage.yml
.trunk/: trunk.yaml
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: app.js.html  config.js.html  delete.js.html  events.js.html  file-hash-worker.js.html  index.html  lang.js.html  other.js.html  owned.js.html  telemetry.js.html  ui.js.html  upload.js.html  utils.js.html
files/: file_owners.json
frontend_tests/: admin_auth.test.js  app_and_snackbar.test.js  config.test.js  delete.test.js  i18n.test.js  lang.test.js  owned_render.test.js  scss_build.test.js  telemetry.test.js  telemetry_additional.test.js  ui.test.js  upload.test.js  upload_thresholds.test.js  utils.test.js  utils_bfcache_clipboard.test.js  utils_extended.test.js  utils_ttl_escape.test.js
public/: admin_already.html  admin_auth.html  admin_ban.html  admin_files.html  admin_reports.html  ban.html  banned.html  debug-error.html  debug.html  faq.html  index.html  report.html  robots.txt  simple.html  sitemap.xml  terms.html  thumbnail.html
public/css/: _animations.scss  _base.scss  _components.scss  _content.scss  _tokens.scss  app.css  app.scss  simple.css
public/css/components/: _badges-nav.scss  _bottom-nav.scss  (+11 more)
public/js/: admin_auth.js  app.js  config.js  delete.js  events.js  file-hash-worker.js  i18n-owned.js  lang.js  ogapp.js  other.js  owned.js  telemetry.js  thumbgen.js  ui.js  upload.js  utils.js
scripts/: build.mjs  clean-css.mjs
src/: handlers.rs  lib.rs  main.rs  rate_limit.rs  state.rs  util.rs
src/handlers/: admin.rs  debug.rs  delete.rs  hosting.rs  reports.rs  security.rs  upload.rs  web.rs
templates/: banned.html.tera  faq.html.tera  index.html.tera  report.html.tera  simple.html.tera  terms.html.tera
tests/: additional_tests.rs  common.rs  handlers_test.rs  main_test.rs  test_file_flow.rs  test_file_manipulation.rs  test_file_upload.rs  test_health.rs  test_hosting.rs  test_limits.rs  test_middleware.rs  test_more_flows.rs  test_report.rs  test_security.rs  test_state.rs  test_util.rs
translations/: lang_en.toml  lang_es.toml  lang_fr.toml  lang_uk.toml
