[package]
name = "juicebox"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart", "macros", "json"] }
axum-server = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "full", "macros", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sanitize-filename = "0.5"
time = "0.3"
anyhow = "1.0"
mime_guess = "2.0.5"
hyper = "1.7.0"
rand = "0.9.2"
