[package]
name = "juicebox"
version = "0.8.2"
edition = "2024"

[dependencies]
infer = "0.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
axum = { version = "0.8", features = ["multipart", "macros", "json"] }
axum-server = "0.7"
tokio = { version = "1.47", features = ["rt-multi-thread", "full", "macros", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sanitize-filename = "0.6"
# time 0.3 with formatting feature for Rfc3339
time = { version = "0.3.44", features = ["formatting"] }
anyhow = "1.0"
mime_guess = "2.0.5"
hyper = "1.7.0"
cuid = "1.3.3"
tower-http = { version = "0.6.6", features = ["fs", "compression-br", "trace"] }
tower = { version = "0.5.2", features = ["timeout"] }
tokio-util = { version = "0.7.16", features = ["io"] }
socket2 = { version = "0.5", features = ["all"] }
urlencoding = "2"
htmlescape = "0.3.1"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "multipart"] }
dotenvy = "0.15.7"
httpdate = "1.0"
tera = "1.20.0"
toml = "0.9.7"
once_cell = "1.21.3"
sha2 = { version = "0.10.9", features = ["std"] }
hmac = "0.12"
dashmap = "6.1.0"
rand = "0.8"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
async-trait = "0.1.83"
sentry = { version = "0.45.0", features = ["logs", "tracing"] }
sentry-tower = { version = "0.45.0", features = ["http", "axum", "axum-matched-path"] }
sentry-tracing = "0.45.0"
log = "0.4"
tracing-log = "0.2"
pprof = { version = "0.14", features = ["prost-codec"] }

[dev-dependencies]
tempfile = "3.23.0"
hyper = "1.7.0"
http-body-util = "0.1.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"


[profile.dev]
incremental = true
